jnr.output
State 38 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: START LPAREN RPAREN LBRACE statement_list RBRACE

    2 statement_list: statement_list statement
    3               | statement

    4 statement: declaration EXCLAIM
    5          | assignment EXCLAIM
    6          | print_func EXCLAIM

    7 declaration: INT var_list_int
    8            | CHAR var_list_char

    9 var_list_int: ID ASSIGN expr COMMA var_list_int
   10             | ID COMMA var_list_int
   11             | ID ASSIGN expr
   12             | ID

   13 var_list_char: ID ASSIGN CHARLIT COMMA var_list_char
   14              | ID COMMA var_list_char
   15              | ID ASSIGN CHARLIT
   16              | ID

   17 assignment: ID ASSIGN expr

   18 print_func: SHOW LPAREN expr RPAREN
   19           | SHOW LPAREN CHARLIT RPAREN
   20           | SHOW LPAREN ID RPAREN

   21 expr: term
   22     | expr PLUS term
   23     | expr MINUS term

   24 term: factor
   25     | term MULT factor
   26     | term DIV factor

   27 factor: NUM
   28       | ID
   29       | LPAREN expr RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 27
CHARLIT (259) 13 15 19
ID (260) 9 10 11 12 13 14 15 16 17 20 28
START (261) 1
INT (262) 7
CHAR (263) 8
SHOW (264) 18 19 20
ASSIGN (265) 9 11 13 15 17
EXCLAIM (266) 4 5 6
COMMA (267) 9 10 13 14
PLUS (268) 22
MINUS (269) 23
MULT (270) 25
DIV (271) 26
LPAREN (272) 1 18 19 20 29
RPAREN (273) 1 18 19 20 29
LBRACE (274) 1
RBRACE (275) 1


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
program (22)
    on left: 1, on right: 0
statement_list (23)
    on left: 2 3, on right: 1 2
statement (24)
    on left: 4 5 6, on right: 2 3
declaration (25)
    on left: 7 8, on right: 4
var_list_int (26)
    on left: 9 10 11 12, on right: 7 9 10
var_list_char (27)
    on left: 13 14 15 16, on right: 8 13 14
assignment (28)
    on left: 17, on right: 5
print_func (29)
    on left: 18 19 20, on right: 6
expr (30)
    on left: 21 22 23, on right: 9 11 17 18 22 23 29
term (31)
    on left: 24 25 26, on right: 21 22 23 25 26
factor (32)
    on left: 27 28 29, on right: 24 25 26


state 0

    0 $accept: . program $end

    START  shift, and go to state 1

    program  go to state 2


state 1

    1 program: START . LPAREN RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: START LPAREN . RPAREN LBRACE statement_list RBRACE

    RPAREN  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: START LPAREN RPAREN . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 6


state 6

    1 program: START LPAREN RPAREN LBRACE . statement_list RBRACE

    ID    shift, and go to state 7
    INT   shift, and go to state 8
    CHAR  shift, and go to state 9
    SHOW  shift, and go to state 10

    statement_list  go to state 11
    statement       go to state 12
    declaration     go to state 13
    assignment      go to state 14
    print_func      go to state 15


state 7

   17 assignment: ID . ASSIGN expr

    ASSIGN  shift, and go to state 16


state 8

    7 declaration: INT . var_list_int

    ID  shift, and go to state 17

    var_list_int  go to state 18


state 9

    8 declaration: CHAR . var_list_char

    ID  shift, and go to state 19

    var_list_char  go to state 20


state 10

   18 print_func: SHOW . LPAREN expr RPAREN
   19           | SHOW . LPAREN CHARLIT RPAREN
   20           | SHOW . LPAREN ID RPAREN

    LPAREN  shift, and go to state 21


state 11

    1 program: START LPAREN RPAREN LBRACE statement_list . RBRACE
    2 statement_list: statement_list . statement

    ID      shift, and go to state 7
    INT     shift, and go to state 8
    CHAR    shift, and go to state 9
    SHOW    shift, and go to state 10
    RBRACE  shift, and go to state 22

    statement    go to state 23
    declaration  go to state 13
    assignment   go to state 14
    print_func   go to state 15


state 12

    3 statement_list: statement .

    $default  reduce using rule 3 (statement_list)


state 13

    4 statement: declaration . EXCLAIM

    EXCLAIM  shift, and go to state 24


state 14

    5 statement: assignment . EXCLAIM

    EXCLAIM  shift, and go to state 25


state 15

    6 statement: print_func . EXCLAIM

    EXCLAIM  shift, and go to state 26


state 16

   17 assignment: ID ASSIGN . expr

    NUM     shift, and go to state 27
    ID      shift, and go to state 28
    LPAREN  shift, and go to state 29

    expr    go to state 30
    term    go to state 31
    factor  go to state 32


state 17

    9 var_list_int: ID . ASSIGN expr COMMA var_list_int
   10             | ID . COMMA var_list_int
   11             | ID . ASSIGN expr
   12             | ID .

    ASSIGN  shift, and go to state 33
    COMMA   shift, and go to state 34

    $default  reduce using rule 12 (var_list_int)


state 18

    7 declaration: INT var_list_int .

    $default  reduce using rule 7 (declaration)


state 19

   13 var_list_char: ID . ASSIGN CHARLIT COMMA var_list_char
   14              | ID . COMMA var_list_char
   15              | ID . ASSIGN CHARLIT
   16              | ID .

    ASSIGN  shift, and go to state 35
    COMMA   shift, and go to state 36

    $default  reduce using rule 16 (var_list_char)


state 20

    8 declaration: CHAR var_list_char .

    $default  reduce using rule 8 (declaration)


state 21

   18 print_func: SHOW LPAREN . expr RPAREN
   19           | SHOW LPAREN . CHARLIT RPAREN
   20           | SHOW LPAREN . ID RPAREN

    NUM      shift, and go to state 27
    CHARLIT  shift, and go to state 37
    ID       shift, and go to state 38
    LPAREN   shift, and go to state 29

    expr    go to state 39
    term    go to state 31
    factor  go to state 32


state 22

    1 program: START LPAREN RPAREN LBRACE statement_list RBRACE .

    $default  reduce using rule 1 (program)


state 23

    2 statement_list: statement_list statement .

    $default  reduce using rule 2 (statement_list)


state 24

    4 statement: declaration EXCLAIM .

    $default  reduce using rule 4 (statement)


state 25

    5 statement: assignment EXCLAIM .

    $default  reduce using rule 5 (statement)


state 26

    6 statement: print_func EXCLAIM .

    $default  reduce using rule 6 (statement)


state 27

   27 factor: NUM .

    $default  reduce using rule 27 (factor)


state 28

   28 factor: ID .

    $default  reduce using rule 28 (factor)


state 29

   29 factor: LPAREN . expr RPAREN

    NUM     shift, and go to state 27
    ID      shift, and go to state 28
    LPAREN  shift, and go to state 29

    expr    go to state 40
    term    go to state 31
    factor  go to state 32


state 30

   17 assignment: ID ASSIGN expr .
   22 expr: expr . PLUS term
   23     | expr . MINUS term

    PLUS   shift, and go to state 41
    MINUS  shift, and go to state 42

    $default  reduce using rule 17 (assignment)


state 31

   21 expr: term .
   25 term: term . MULT factor
   26     | term . DIV factor

    MULT  shift, and go to state 43
    DIV   shift, and go to state 44

    $default  reduce using rule 21 (expr)


state 32

   24 term: factor .

    $default  reduce using rule 24 (term)


state 33

    9 var_list_int: ID ASSIGN . expr COMMA var_list_int
   11             | ID ASSIGN . expr

    NUM     shift, and go to state 27
    ID      shift, and go to state 28
    LPAREN  shift, and go to state 29

    expr    go to state 45
    term    go to state 31
    factor  go to state 32


state 34

   10 var_list_int: ID COMMA . var_list_int

    ID  shift, and go to state 17

    var_list_int  go to state 46


state 35

   13 var_list_char: ID ASSIGN . CHARLIT COMMA var_list_char
   15              | ID ASSIGN . CHARLIT

    CHARLIT  shift, and go to state 47


state 36

   14 var_list_char: ID COMMA . var_list_char

    ID  shift, and go to state 19

    var_list_char  go to state 48


state 37

   19 print_func: SHOW LPAREN CHARLIT . RPAREN

    RPAREN  shift, and go to state 49


state 38

   20 print_func: SHOW LPAREN ID . RPAREN
   28 factor: ID .

    RPAREN  shift, and go to state 50

    RPAREN    [reduce using rule 28 (factor)]
    $default  reduce using rule 28 (factor)


state 39

   18 print_func: SHOW LPAREN expr . RPAREN
   22 expr: expr . PLUS term
   23     | expr . MINUS term

    PLUS    shift, and go to state 41
    MINUS   shift, and go to state 42
    RPAREN  shift, and go to state 51


state 40

   22 expr: expr . PLUS term
   23     | expr . MINUS term
   29 factor: LPAREN expr . RPAREN

    PLUS    shift, and go to state 41
    MINUS   shift, and go to state 42
    RPAREN  shift, and go to state 52


state 41

   22 expr: expr PLUS . term

    NUM     shift, and go to state 27
    ID      shift, and go to state 28
    LPAREN  shift, and go to state 29

    term    go to state 53
    factor  go to state 32


state 42

   23 expr: expr MINUS . term

    NUM     shift, and go to state 27
    ID      shift, and go to state 28
    LPAREN  shift, and go to state 29

    term    go to state 54
    factor  go to state 32


state 43

   25 term: term MULT . factor

    NUM     shift, and go to state 27
    ID      shift, and go to state 28
    LPAREN  shift, and go to state 29

    factor  go to state 55


state 44

   26 term: term DIV . factor

    NUM     shift, and go to state 27
    ID      shift, and go to state 28
    LPAREN  shift, and go to state 29

    factor  go to state 56


state 45

    9 var_list_int: ID ASSIGN expr . COMMA var_list_int
   11             | ID ASSIGN expr .
   22 expr: expr . PLUS term
   23     | expr . MINUS term

    COMMA  shift, and go to state 57
    PLUS   shift, and go to state 41
    MINUS  shift, and go to state 42

    $default  reduce using rule 11 (var_list_int)


state 46

   10 var_list_int: ID COMMA var_list_int .

    $default  reduce using rule 10 (var_list_int)


state 47

   13 var_list_char: ID ASSIGN CHARLIT . COMMA var_list_char
   15              | ID ASSIGN CHARLIT .

    COMMA  shift, and go to state 58

    $default  reduce using rule 15 (var_list_char)


state 48

   14 var_list_char: ID COMMA var_list_char .

    $default  reduce using rule 14 (var_list_char)


state 49

   19 print_func: SHOW LPAREN CHARLIT RPAREN .

    $default  reduce using rule 19 (print_func)


state 50

   20 print_func: SHOW LPAREN ID RPAREN .

    $default  reduce using rule 20 (print_func)


state 51

   18 print_func: SHOW LPAREN expr RPAREN .

    $default  reduce using rule 18 (print_func)


state 52

   29 factor: LPAREN expr RPAREN .

    $default  reduce using rule 29 (factor)


state 53

   22 expr: expr PLUS term .
   25 term: term . MULT factor
   26     | term . DIV factor

    MULT  shift, and go to state 43
    DIV   shift, and go to state 44

    $default  reduce using rule 22 (expr)


state 54

   23 expr: expr MINUS term .
   25 term: term . MULT factor
   26     | term . DIV factor

    MULT  shift, and go to state 43
    DIV   shift, and go to state 44

    $default  reduce using rule 23 (expr)


state 55

   25 term: term MULT factor .

    $default  reduce using rule 25 (term)


state 56

   26 term: term DIV factor .

    $default  reduce using rule 26 (term)


state 57

    9 var_list_int: ID ASSIGN expr COMMA . var_list_int

    ID  shift, and go to state 17

    var_list_int  go to state 59


state 58

   13 var_list_char: ID ASSIGN CHARLIT COMMA . var_list_char

    ID  shift, and go to state 19

    var_list_char  go to state 60


state 59

    9 var_list_int: ID ASSIGN expr COMMA var_list_int .

    $default  reduce using rule 9 (var_list_int)


state 60

   13 var_list_char: ID ASSIGN CHARLIT COMMA var_list_char .

    $default  reduce using rule 13 (var_list_char)
